# polaris_simulator

./: Cargo.toml
configs/: default.bak  default.yaml  spacecraft.yaml
src/: main.rs  spacecraft_init.py
src/shims/: fsw_shim.rs  mod.rs  sc_shim.rs
